[gd_scene load_steps=61 format=2]

[ext_resource path="res://Enemies/SkeletonArcher/SkeletonArcher.gd" type="Script" id=1]
[ext_resource path="res://Enemies/SkeletonArcher/assets/Archer Skeleton.png" type="Texture" id=2]
[ext_resource path="res://Enemies/EnemyStateMachine/AttackRangeEnemy.gd" type="Script" id=3]
[ext_resource path="res://Enemies/SkeletonArcher/Arrow.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/SkeletonArcher/SFX_Skeleton_Death_00.wav" type="AudioStream" id=5]
[ext_resource path="res://Enemies/SkeletonArcher/SFX_Archers_Shot_01.wav" type="AudioStream" id=6]
[ext_resource path="res://Enemies/SkeletonArcher/SFX_Archers_Shot_00.wav" type="AudioStream" id=7]
[ext_resource path="res://StateMachine/StateMachine.gd" type="Script" id=8]
[ext_resource path="res://Combat/Hitbox.tscn" type="PackedScene" id=9]
[ext_resource path="res://Player/source/Skin.tscn" type="PackedScene" id=10]
[ext_resource path="res://Enemies/EnemyStateMachine/SpawnEnemy.gd" type="Script" id=11]
[ext_resource path="res://Enemies/SkeletonArcher/SFX_Archers_Shot_02.wav" type="AudioStream" id=12]
[ext_resource path="res://Enemies/EnemyStateMachine/MoveEnemy.gd" type="Script" id=13]
[ext_resource path="res://Enemies/EnemyStateMachine/HitEnemy.gd" type="Script" id=14]
[ext_resource path="res://Enemies/EnemyStateMachine/DieEnemy.gd" type="Script" id=15]
[ext_resource path="res://Enemies/EnemyStateMachine/RunEnemy.gd" type="Script" id=16]
[ext_resource path="res://Enemies/EnemyStateMachine/IdleEnemy.gd" type="Script" id=17]
[ext_resource path="res://Enemies/EnemyStateMachine/AirEnemy.gd" type="Script" id=18]

[sub_resource type="AtlasTexture" id=145]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=146]
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=147]
atlas = ExtResource( 2 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=148]
atlas = ExtResource( 2 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=149]
atlas = ExtResource( 2 )
region = Rect2( 256, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=150]
atlas = ExtResource( 2 )
region = Rect2( 320, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=151]
atlas = ExtResource( 2 )
region = Rect2( 384, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=152]
atlas = ExtResource( 2 )
region = Rect2( 448, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=153]
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=154]
atlas = ExtResource( 2 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=155]
atlas = ExtResource( 2 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=156]
atlas = ExtResource( 2 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=157]
atlas = ExtResource( 2 )
region = Rect2( 256, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=158]
atlas = ExtResource( 2 )
region = Rect2( 320, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=159]
atlas = ExtResource( 2 )
region = Rect2( 384, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=160]
atlas = ExtResource( 2 )
region = Rect2( 448, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=161]
atlas = ExtResource( 2 )
region = Rect2( 512, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=162]
atlas = ExtResource( 2 )
region = Rect2( 576, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=163]
atlas = ExtResource( 2 )
region = Rect2( 0, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=164]
atlas = ExtResource( 2 )
region = Rect2( 64, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=165]
atlas = ExtResource( 2 )
region = Rect2( 128, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=166]
atlas = ExtResource( 2 )
region = Rect2( 192, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=167]
atlas = ExtResource( 2 )
region = Rect2( 256, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=168]
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=169]
atlas = ExtResource( 2 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=142]
atlas = ExtResource( 2 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=143]
atlas = ExtResource( 2 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=144]
atlas = ExtResource( 2 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=170]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=171]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=172]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=173]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=174]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=175]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=104]
animations = [ {
"frames": [ SubResource( 145 ), SubResource( 146 ), SubResource( 147 ), SubResource( 148 ), SubResource( 149 ), SubResource( 150 ), SubResource( 151 ), SubResource( 152 ) ],
"loop": true,
"name": "attack",
"speed": 10.0
}, {
"frames": [ SubResource( 153 ), SubResource( 154 ), SubResource( 155 ), SubResource( 156 ), SubResource( 157 ), SubResource( 158 ), SubResource( 159 ), SubResource( 160 ), SubResource( 161 ), SubResource( 162 ), SubResource( 163 ), SubResource( 164 ), SubResource( 165 ), SubResource( 166 ), SubResource( 167 ), SubResource( 167 ), SubResource( 167 ), SubResource( 167 ), SubResource( 167 ), SubResource( 167 ), SubResource( 167 ) ],
"loop": true,
"name": "death",
"speed": 12.0
}, {
"frames": [ SubResource( 168 ), SubResource( 168 ), SubResource( 168 ), SubResource( 169 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ SubResource( 142 ), SubResource( 143 ), SubResource( 144 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 170 ), SubResource( 171 ), SubResource( 172 ), SubResource( 173 ), SubResource( 174 ), SubResource( 175 ) ],
"loop": true,
"name": "run",
"speed": 7.0
} ]

[sub_resource type="Animation" id=131]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=132]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=177]
resource_name = "hit"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=130]
resource_name = "spawn"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=117]
radius = 12.0
height = 14.0

[sub_resource type="CapsuleShape2D" id=176]
radius = 12.0

[sub_resource type="RectangleShape2D" id=133]
extents = Vector2( 5, 16.5 )

[node name="SkeletonArcher" type="KinematicBody2D" groups=["Enemies"]]
modulate = Color( 0, 0, 0, 1 )
collision_layer = 32
collision_mask = 26
script = ExtResource( 1 )
score = 50
experience = 25
speed = 40.0
speed_difference_on_spawn_min = -25.0
speed_difference_on_spawn_max = 10.0
distance_to_attack = 300.0
attack_sounds = [ ExtResource( 7 ), ExtResource( 6 ), ExtResource( 12 ) ]
projectile_speed = 300.0

[node name="Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
pitch_scale = 2.35
bus = "Effects"

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]

[node name="Skin" parent="." instance=ExtResource( 10 )]
position = Vector2( 0, -17 )
scale = Vector2( -1, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Skin"]
position = Vector2( 0, 4 )
frames = SubResource( 104 )
animation = "idle"
frame = 2
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Skin"]
anims/RESET = SubResource( 131 )
anims/death = SubResource( 132 )
anims/hit = SubResource( 177 )
anims/spawn = SubResource( 130 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -19 )
shape = SubResource( 117 )

[node name="Hitbox" parent="." instance=ExtResource( 9 )]
position = Vector2( 0, -14 )
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, -2 )
shape = SubResource( 176 )

[node name="LedgeDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="LedgeDetector"]
position = Vector2( 15, 5.5 )
shape = SubResource( 133 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 8 )
initial_state = NodePath("SpawnEnemy")

[node name="SpawnEnemy" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="DieEnemy" type="Node" parent="StateMachine"]
script = ExtResource( 15 )

[node name="AttackEnemy" type="Node" parent="StateMachine"]
script = ExtResource( 3 )
spawn_projectile_frame = 5
projectile_scene = ExtResource( 4 )

[node name="AttackCooldown" type="Timer" parent="StateMachine/AttackEnemy"]
wait_time = 5.0
one_shot = true

[node name="HitEnemy" type="Node" parent="StateMachine"]
script = ExtResource( 14 )

[node name="MoveEnemy" type="Node" parent="StateMachine"]
script = ExtResource( 13 )
distance_to_player = Vector2( 100, 200 )

[node name="IdleEnemy" type="Node" parent="StateMachine/MoveEnemy"]
script = ExtResource( 17 )

[node name="RunEnemy" type="Node" parent="StateMachine/MoveEnemy"]
script = ExtResource( 16 )

[node name="AirEnemy" type="Node" parent="StateMachine/MoveEnemy"]
script = ExtResource( 18 )

[connection signal="died" from="Hitbox" to="." method="_on_Hitbox_died"]
[connection signal="got_hit" from="Hitbox" to="." method="_on_Hitbox_got_hit"]
